# turret_monitor_firmware

./: .gitignore  Cargo.toml  Embed.toml  LICENSE  README.md  book.toml
.cargo/: config
book_src/: SUMMARY.md  interface.md  pins.md  synopsis.md
book_src/implementation_details/: dma.md  extern_rust.md  index.md  rtic.md  usart1.md
src/: main.rs  periodic_update.rs  tim8.rs
src/datamodel/: mod.rs  request.rs  rx_errors.rs  telemetry_packet.rs
src/tasks/: dma2_stream7.rs  mod.rs  periodic_update.rs  tim8.rs  usart1_rx.rs  usart1_tx.rs  write_telemetry.rs
