[package]
name = "turret_firmware"
version = "0.2.0"
authors = ["Joshua Salzedo <jsalzedo0@saddleback.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rtic = "0.6.0-rc.2"
dwt-systick-monotonic = "0.1.0-alpha.3"
cortex-m = "0.7.3"
embedded-dma = "0.1.2"
serde-json-core = "0.4.0"

[dependencies.serde_cbor]
version = "0.11.1"
default-features = false

[dependencies.postcard-cobs]
version = ">=0.2" # https://github.com/ferrous-systems/cobs.rs/pull/2
default-features = false
features= []

[dependencies.rtt-target]
version = "0.3.1"
features = ["cortex-m"]


[dependencies.panic-rtt-target]
version = "0.1.2"
features = ["cortex-m"]

[dependencies.stm32f4xx-hal]
git = "https://github.com/stm32-rs/stm32f4xx-hal.git"
rev = "9bbdac81025292de2a1ba02ca3e60cbedcb70c8c"
features = ["stm32f446", "rt"]


[dependencies.serde]
default-features = false
features = ["derive"]
version = "1.0.127"

[dependencies.heapless]
version = "0.7.3"

[profile.dev]
debug=2